--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+drool (1.0.0.beta.4-1~unstable+1) unstable; urgency=low
+
+  * Release 1.0.0-beta.4
+
+    Compatibility fixes and packaging.
+
+    f6b6251 Fix #66: Check for libev/ev.h also
+    8dff723 Code formatting
+    a5af21d Update pcap-thread to v2.1.3
+    e622612 Prepare SPEC for OSB/COPR
+    3c8fbb0 Fix #57: Update README with build tools and environment setup
+    456d586 Add debian packaging files
+    a0a74cb Add dependencies
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Tue, 22 Aug 2017 14:13:10 +0200
+
 drool (1.0.0.beta.3-1~unstable+1) unstable; urgency=low
 
   * Release 1.0.0-beta.3
