--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+drool (1.0.0.rc.1-1~unstable+1) unstable; urgency=low
+
+  * Release 1.0.0-rc.1
+
+    Mostly documentation updates and clarifications but also a new timing
+    mode `best_effort` to send packets as fast as possible without warnings
+    and a correct usage of `nanosleep()` on systems that does not support
+    `clock_nanosleep()`.
+
+    114f984 Fix #74: Best effort timing mode, fix usage of `nanosleep()`
+    a32201c Rework development notes
+    3999214 Add examples and default values
+    1e70ab9 Design documentation
+    6e530ee Fix #64: More documentation around context and client_pool,
+            and how configuration relates to each other.
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Mon, 18 Sep 2017 14:25:27 +0200
+
 drool (1.0.0.beta.4-1~unstable+1) unstable; urgency=low
 
   * Release 1.0.0-beta.4
