--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,16 @@
+2018-01-16 Jerry Lundström
+
+    Release 1.0.2
+
+    Bugfixes:
+    - TCP option parsing was fixed in pcap-thread 3.0.0 but the work-around
+      code was still in drool
+    - The month in the console output was incorrect
+
+    a47ed95 Update copyright year
+    4d44801 TCP options was fixed in pcap-thread 3.0.0
+    cb5cebf Fix #93: `tm_mon` is 0-11
+
 2017-12-19 Jerry Lundström
 
     Release 1.0.1 (v1.0)
