--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+drool (1.0.2-1~unstable+1) unstable; urgency=low
+
+  * Release 1.0.2
+
+    Bugfixes:
+    - TCP option parsing was fixed in pcap-thread 3.0.0 but the work-around
+      code was still in drool
+    - The month in the console output was incorrect
+
+    a47ed95 Update copyright year
+    4d44801 TCP options was fixed in pcap-thread 3.0.0
+    cb5cebf Fix #93: `tm_mon` is 0-11
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Tue, 16 Jan 2018 17:44:36 +0100
+
 drool (1.0.1-1~unstable+1) unstable; urgency=low
 
   * Release 1.0.1 (v1.0)
