--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+drool (1.1.0-1~unstable+1) unstable; urgency=low
+
+  * Release 1.1.0
+
+    Rework of the timing code to make it more effective, based on
+    proof-of-concept from Petr Špaček @pspacek (CZ.NIC).
+
+    The `best_effort` timing mode is now deprecated, this is now the same
+    mode as `keep` and the warnings `keep` made when unable to follow
+    timings have been removed.
+
+    6e81a31 Timing
+    d30918c WIP: timing rework
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Fri, 16 Feb 2018 11:52:10 +0100
+
 drool (1.0.2-1~unstable+1) unstable; urgency=low
 
   * Release 1.0.2
