--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+drool (1.99.0-1.~unstable+1) unstable; urgency=low
+
+  * Release 1.99.0
+
+    Alpha version using dnsjit.
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Wed, 11 Apr 2018 16:00:14 +0200
+
 drool (1.1.0-1~unstable+1) unstable; urgency=low
 
   * Release 1.1.0
