--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+drool (1.99.2-1~unstable+1) unstable; urgency=low
+
+  * Alpha release 1.99.2
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Thu, 19 Jul 2018 13:24:59 +0200
+
 drool (1.99.1-7~unstable+1) unstable; urgency=low
 
   * Release 1.99.1
