--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+drool (1.99.3-1~unstable+1) unstable; urgency=low
+
+  * Alpha release 1.99.3
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Wed, 01 Aug 2018 11:46:31 +0200
+
 drool (1.99.2-1~unstable+1) unstable; urgency=low
 
   * Alpha release 1.99.2
