--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+drool (1.99.4-1~unstable+1) unstable; urgency=low
+
+  * Alpha release 1.99.4
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Fri, 25 Jan 2019 11:12:02 +0100
+
 drool (1.99.3-1~unstable+1) unstable; urgency=low
 
   * Alpha release 1.99.3
