--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ drool (2.0.0-1~unstable+1) unstable; urgency=low
     This major release is a complete rewrite of drool to Lua using dnsjit!
 
     This includes two commands:
-    - `drool reply`: replay DNS traffic from packet capture (PCAP) files
+    - `drool replay`: replay DNS traffic from packet capture (PCAP) files
       and send it to a specified server, with options such as to manipulate
       the timing between packets, as well as loop packets infinitely or for
       a set number of iterations.
